gui enchantments - removed actionbar - moved menu to long click - added padding to leave some space near screen borders - changed default color scheme to holo blue text on black from white text on black

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
+.idea
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
+build
+term/build
+term/.cxx
+term/release
+libtermexec/build
+libtermexec/.cxx
+emulatorview/build
+emulatorview/.cxx
+local.properties
 *.iml
